--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "react-countup": "^4.3.3",
     "react-doc-viewer": "^0.1.5",
     "react-dom": "^17.0.1",
-    "react-export-excel": "^0.5.3",
     "react-hook-form": "^6.14.2",
     "react-intl-tel-input": "^8.0.4",
     "react-minimal-pie-chart": "^8.1.0",
@@ -53,6 +52,7 @@
     "throttle-debounce": "^3.0.1"
   },
   "devDependencies": {
+    "ajv": "^7.2.4",
     "auto-changelog": "^2.2.1",
     "react-scripts": "^5.0.1",
     "redux-mock-store": "^1.5.4"
