--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@coreui/utils": "^1.3.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.5",
     "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
     "@reduxjs/toolkit": "^1.5.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
