--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@coreui/react": "^3.4.0",
     "@coreui/react-chartjs": "^1.0.1",
     "@coreui/utils": "^1.3.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.5",
+    "@mui/material": "^6.0.2",
     "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
     "@reduxjs/toolkit": "^1.5.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
